syntax = "proto3";

package auth;

import "google/protobuf/timestamp.proto";

// Auth Service
service AuthService {
  // Registration & Login
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc login(LoginRequest) returns (LoginResponse);
  rpc logout(LogoutRequest) returns (LogoutResponse);

  // Token Management
  rpc refreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc validateToken(ValidateTokenRequest) returns (ValidateTokenResponse);

  // Password Management
  rpc changePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc resetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);

  // User Management
  rpc getUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
  rpc updateUserProfile(UpdateUserProfileRequest) returns (UpdateUserProfileResponse);
  rpc getUserSessions(GetUserSessionsRequest) returns (GetUserSessionsResponse);

  // Admin Operations
  rpc getUsers(GetUsersRequest) returns (GetUsersResponse);
  rpc searchUsers(SearchUsersRequest) returns (SearchUsersResponse);
  rpc updateUserStatus(UpdateUserStatusRequest) returns (UpdateUserStatusResponse);

  // Health Check
  rpc health(HealthCheckRequest) returns (HealthCheckResponse);
}

// Registration & Login Messages
message RegisterRequest {
  string email = 1;
  string password = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  string phone = 6;
  string role = 7;
  string ip_address = 8;
  string user_agent = 9;
}

message RegisterResponse {
  bool success = 1;
  User user = 2;
  string access_token = 3;
  string refresh_token = 4;
  string message = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string ip_address = 3;
  string user_agent = 4;
}

message LoginResponse {
  bool success = 1;
  User user = 2;
  string access_token = 3;
  string refresh_token = 4;
  string message = 5;
}

message LogoutRequest {
  string user_id = 1;
  string session_id = 2;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}

// Token Management Messages
message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  bool success = 1;
  string access_token = 2;
  string refresh_token = 3;
  string message = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  User user = 2;
}

// Password Management Messages
message ChangePasswordRequest {
  string user_id = 1;
  string current_password = 2;
  string new_password = 3;
}

message ChangePasswordResponse {
  bool success = 1;
  string message = 2;
}

message ResetPasswordRequest {
  string token = 1;
  string new_password = 2;
}

message ResetPasswordResponse {
  bool success = 1;
  string message = 2;
}

// User Management Messages
message GetUserProfileRequest {
  string user_id = 1;
}

message GetUserProfileResponse {
  bool success = 1;
  User user = 2;
  string message = 3;
}

message UpdateUserProfileRequest {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string phone = 4;
  string avatar = 5;
}

message UpdateUserProfileResponse {
  bool success = 1;
  User user = 2;
  string message = 3;
}

message GetUserSessionsRequest {
  string user_id = 1;
}

message GetUserSessionsResponse {
  bool success = 1;
  repeated UserSession sessions = 2;
  string message = 3;
}

// Admin Operations Messages
message GetUsersRequest {
  int32 page = 1;
  int32 limit = 2;
  string role = 3;
  string status = 4;
}

message GetUsersResponse {
  bool success = 1;
  repeated User users = 2;
  int32 total = 3;
  int32 page = 4;
  int32 limit = 5;
  string message = 6;
}

message SearchUsersRequest {
  string query = 1;
  int32 page = 2;
  int32 limit = 3;
}

message SearchUsersResponse {
  bool success = 1;
  repeated User users = 2;
  int32 total = 3;
  string message = 4;
}

message UpdateUserStatusRequest {
  string user_id = 1;
  string status = 2;
  string reason = 3;
}

message UpdateUserStatusResponse {
  bool success = 1;
  string message = 2;
}

// Health Check Messages
message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  string status = 1;
  string message = 2;
  map<string, string> details = 3;
}

// Data Models
message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  string phone = 6;
  string role = 7;
  string status = 8;
  string avatar = 9;
  bool email_verified = 10;
  bool two_factor_enabled = 11;
  google.protobuf.Timestamp last_login_at = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}

message UserSession {
  string id = 1;
  string user_id = 2;
  string session_id = 3;
  string ip_address = 4;
  string user_agent = 5;
  bool is_active = 6;
  google.protobuf.Timestamp expires_at = 7;
  google.protobuf.Timestamp created_at = 8;
} 